--- a/mydoc/编译运行.md
+++ b/mydoc/编译运行.md
@@ -14,7 +14,7 @@ nginx/auto 里增加 cmake文件
 编译nginx
     
     --prefix=/Users/gaoxingang/ws/git_ws/nginx-lab/mynginx --with-pcre=/Users/gaoxingang/ws/git_ws/nginx-temp/pcre-8.41 --with-openssl=/Users/gaoxingang/ws/git_ws/nginx-temp/openssl-1.0.2u --with-http_ssl_module --with-http_v2_module
-    编译后生成objs目录
+    编译后生成objs目录，和CMakeLists.txt
     
 配置
    
